--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
                     </a>
                 </div>
                 <div class="nav-btn">
-                    <a iddiv="box" class="btn btn--nav" href="#">REQUEST A QUOTE</a>
+                    <a class="btn btn--nav js-open-popup">REQUEST A QUOTE</a>
                 </div>
             </div>
         </div>
@@ -51,7 +51,7 @@
                 <h1 class="banner__info">We give you the stuff you need to make more money</h1>
                 <p class="banner__descr">Bring us your remarkable business. We’ll give you the design, content and tool
                     you need to become unstoppable. 2018 is the year you become rich.</p>
-                <a href="#" iddiv="box" class="btn btn--banner">Claim your free consultation</a>
+                <a class="btn btn--banner js-scroll-to-footer">Claim your free consultation</a>
             </div>
         </div>
     </header>
@@ -68,7 +68,7 @@
                     sprint out of the starting blocks… and then disappear entirely. Luckily, you found us, and no one
                     can stop you now from working with us.
                 </p>
-                <a href="#" iddiv="box" class="btn btn--about">Claim your free consultation</a>
+                <a  class="btn btn--about js-scroll-to-footer">Claim your free consultation</a>
             </div>
             <div class="about-client">
                 <img class="about-client__quotes" src="img/quotes.png" alt="">
@@ -127,7 +127,8 @@
                     <img src="img/journal-icon.png" alt="">
                 </div>
                 <h3 class="services-item__heading">Copywriting Material</h3>
-                <p class="text services-item__text">Or worse, you’ve heard horror stories about programmers, web designers
+                <p class="text services-item__text">Or worse, you’ve heard horror stories about programmers, web
+                    designers
                     and writers who sprint out of the starting blocks.</p>
             </div>
             <div class="services-item">
@@ -135,7 +136,8 @@
                     <img src="img/home-page-icon.png" alt="">
                 </div>
                 <h3 class="services-item__heading">Landing Page Design</h3>
-                <p class="text services-item__text">Or worse, you’ve heard horror stories about programmers, web designers
+                <p class="text services-item__text">Or worse, you’ve heard horror stories about programmers, web
+                    designers
                     and writers who sprint out of the starting blocks.</p>
             </div>
             <div class="services-item">
@@ -143,7 +145,8 @@
                     <img src="img/megaphone-icon.png" alt="">
                 </div>
                 <h3 class="services-item__heading">Full Marketing Design</h3>
-                <p class="text services-item__text">Or worse, you’ve heard horror stories about programmers, web designers
+                <p class="text services-item__text">Or worse, you’ve heard horror stories about programmers, web
+                    designers
                     and writers who sprint out of the starting blocks.</p>
             </div>
             <div class="services-item">
@@ -151,7 +154,8 @@
                     <img src="img/browser-window-icon.png" alt="">
                 </div>
                 <h3 class="services-item__heading">Website Development</h3>
-                <p class="text services-item__text">Or worse, you’ve heard horror stories about programmers, web designers
+                <p class="text services-item__text">Or worse, you’ve heard horror stories about programmers, web
+                    designers
                     and writers who sprint out of the starting blocks.</p>
             </div>
             <div class="services-item">
@@ -159,7 +163,8 @@
                     <img src="img/bookmark-icon.png" alt="">
                 </div>
                 <h3 class="services-item__heading">Marketing Materials</h3>
-                <p class="text services-item__text">Or worse, you’ve heard horror stories about programmers, web designers
+                <p class="text services-item__text">Or worse, you’ve heard horror stories about programmers, web
+                    designers
                     and writers who sprint out of the starting blocks.</p>
             </div>
         </div>
@@ -193,8 +198,8 @@
                                 <div class="skills">MOBILE APP</div>
                             </div>
                             <div class="portfolio-slider-buttons">
-                                <button type="button" class="slider-prev"><img src="./img/left.png" alt="<" /></button>
-                                <button type="button" class="slider-next"><img src="./img/right.png" alt=">" /></button>
+                                <button type="button" class="slider-prev"><img src="./img/left.png" alt="<"/></button>
+                                <button type="button" class="slider-next"><img src="./img/right.png" alt=">"/></button>
                             </div>
                         </div>
                     </div>
@@ -216,8 +221,8 @@
                                 <div class="skills">MOBILE APP</div>
                             </div>
                             <div class="portfolio-slider-buttons">
-                                <button type="button" class="slider-prev"><img src="./img/left.png" alt="<" /></button>
-                                <button type="button" class="slider-next"><img src="./img/right.png" alt=">" /></button>
+                                <button type="button" class="slider-prev"><img src="./img/left.png" alt="<"/></button>
+                                <button type="button" class="slider-next"><img src="./img/right.png" alt=">"/></button>
                             </div>
                         </div>
                     </div>
@@ -228,7 +233,7 @@
         </div>
     </section>
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
         <div class="contact">
             <div class="container container--contact">
                 <h2 class="title title--contact">Contact us today to learn how we increase your revenue.</h2>
@@ -249,36 +254,42 @@
                         <span class="form-field__label" for="textarea">
                             <img src="./img/contact-question.png" alt="">
                         </span>
-                        <textarea class="form-field__input form-field__input--textarea" id="textarea" placeholder="How we can help you?"></textarea>
+                        <textarea class="form-field__input form-field__input--textarea" id="textarea"
+                                  placeholder="How we can help you?"></textarea>
                     </div>
-                    <input type="submit" iddiv="box" class="btn btn--contact" value="Claim your free consultation" />
+                    <input type="submit" class="btn btn--contact js-submit" value="Claim your free consultation"/>
                 </div>
             </div>
         </div>
     </footer>
-    <div id="popup-form__bg"></div>
-    <div id="box" class="popup-form">
-        <h2 class="title title--popup">Claim your free consultation</h2>
-        <div class="form-field">
-            <label class="form-field__label" for="name">
-                <img src="./img/contact-icon.png" alt="">
-            </label>
-            <input type="text" class="form-field__input" id="name" placeholder="Your name">
+
+    <div class="popup">
+        <div class="popup__bg js-close-popup"></div>
+        <div class="popup__form">
+            <h2 class="title title--popup">Claim your free consultation</h2>
+            <div class="form-field">
+                <label class="form-field__label" for="name">
+                    <img src="./img/contact-icon.png" alt="">
+                </label>
+                <input type="text" class="form-field__input" id="name" placeholder="Your name">
+            </div>
+            <div class="form-field">
+                <label class="form-field__label" for="email">
+                    <img src="./img/contact-mail.png" alt="">
+                </label>
+                <input type="email" id="email" class="form-field__input" placeholder="Email">
+            </div>
+            <div class="form-field">
+                <span class="form-field__label" for="textarea">
+                    <img src="./img/contact-question.png" alt="">
+                </span>
+                <textarea class="form-field__input form-field__input--textarea" id="textarea"
+                          placeholder="How we can help you?"></textarea>
+            </div>
+            <input type="submit" class="btn btn--popup js-submit" value="Submit"/>
         </div>
-        <div class="form-field">
-            <label class="form-field__label" for="email">
-                <img src="./img/contact-mail.png" alt="">
-            </label>
-            <input type="email" id="email" class="form-field__input" placeholder="Email">
-        </div>
-        <div class="form-field">
-            <span class="form-field__label" for="textarea">
-                            <img src="./img/contact-question.png" alt="">
-                        </span>
-            <textarea class="form-field__input form-field__input--textarea" id="textarea" placeholder="How we can help you?"></textarea>
-        </div>
-        <input type="submit" iddiv="box" class="btn btn--popup" value="Submit" />
     </div>
+    <div class="btn btn--wtf js-scroll-to-top">👆</div>
     <script type="text/javascript" src="js/libs.min.js"></script>
     <script type="text/javascript" src="js/custom.js"></script>
 
