popup-form done

--- a/src/index.html
+++ b/src/index.html
@@ -237,7 +237,7 @@
                         <label class="form-field__label" for="name">
                             <img src="./img/contact-icon.png" alt="">
                         </label>
-                        <input type="text" class="form-field__input" id="name" placeholder="Your name">
+                        <input type="text" class="form-field__input" id="name" autocomplete="off" placeholder="Your name">
                     </div>
                     <div class="form-field">
                         <label class="form-field__label" for="email">
