--- a/src/index.html
+++ b/src/index.html
@@ -49,8 +49,7 @@
             <div class="container container--banner">
                 <p class="banner__head">GET THE FOOLPROOF STRATEGY THAT HELPS YOU WIN</p>
                 <h1 class="banner__info">We give you the stuff you need to make more money</h1>
-                <p class="banner__descr">Bring us your remarkable business. We’ll give you the design, content and tool
-                    you need to become unstoppable. 2018 is the year you become rich.</p>
+                <p class="banner__descr">Bring us your remarkable business. We’ll give you the design, content and tool you need to become unstoppable. 2018 is the year you become rich.</p>
                 <a class="btn btn--banner js-scroll-to-footer">Claim your free consultation</a>
             </div>
         </div>
@@ -66,8 +65,7 @@
                 <img class="about-company__img" src="img/about-img.png" alt="#">
                 <p class="text">Or worse, you’ve heard horror stories about programmers, web designers and writers who
                     sprint out of the starting blocks… and then disappear entirely. Luckily, you found us, and no one
-                    can stop you now from working with us.
-                </p>
+                    can stop you now from working with us.</p>
                 <a  class="btn btn--about js-scroll-to-footer">Claim your free consultation</a>
             </div>
             <div class="about-client">
@@ -128,8 +126,7 @@
                 </div>
                 <h3 class="services-item__heading">Copywriting Material</h3>
                 <p class="text services-item__text">Or worse, you’ve heard horror stories about programmers, web
-                    designers
-                    and writers who sprint out of the starting blocks.</p>
+                    designers and writers who sprint out of the starting blocks.</p>
             </div>
             <div class="services-item">
                 <div class="services-item__icon-wrapper">
@@ -137,8 +134,7 @@
                 </div>
                 <h3 class="services-item__heading">Landing Page Design</h3>
                 <p class="text services-item__text">Or worse, you’ve heard horror stories about programmers, web
-                    designers
-                    and writers who sprint out of the starting blocks.</p>
+                    designers and writers who sprint out of the starting blocks.</p>
             </div>
             <div class="services-item">
                 <div class="services-item__icon-wrapper">
@@ -146,8 +142,7 @@
                 </div>
                 <h3 class="services-item__heading">Full Marketing Design</h3>
                 <p class="text services-item__text">Or worse, you’ve heard horror stories about programmers, web
-                    designers
-                    and writers who sprint out of the starting blocks.</p>
+                    designers and writers who sprint out of the starting blocks.</p>
             </div>
             <div class="services-item">
                 <div class="services-item__icon-wrapper">
@@ -155,8 +150,7 @@
                 </div>
                 <h3 class="services-item__heading">Website Development</h3>
                 <p class="text services-item__text">Or worse, you’ve heard horror stories about programmers, web
-                    designers
-                    and writers who sprint out of the starting blocks.</p>
+                    designers and writers who sprint out of the starting blocks.</p>
             </div>
             <div class="services-item">
                 <div class="services-item__icon-wrapper">
@@ -164,8 +158,7 @@
                 </div>
                 <h3 class="services-item__heading">Marketing Materials</h3>
                 <p class="text services-item__text">Or worse, you’ve heard horror stories about programmers, web
-                    designers
-                    and writers who sprint out of the starting blocks.</p>
+                    designers and writers who sprint out of the starting blocks.</p>
             </div>
         </div>
     </section>
@@ -177,7 +170,6 @@
                 We’ll do everything we can to grow your revenue. Our motivation is to drive your business further
                 that you can imagine.
             </div>
-
             <div class="portfolio-slider-wrapper">
                 <div class="portfolio-slider">
                     <div class="portfolio-slider-item">
@@ -254,8 +246,7 @@
                         <span class="form-field__label" for="textarea">
                             <img src="./img/contact-question.png" alt="">
                         </span>
-                        <textarea class="form-field__input form-field__input--textarea" id="textarea"
-                                  placeholder="How we can help you?"></textarea>
+                        <textarea class="form-field__input form-field__input--textarea" id="textarea" placeholder="How we can help you?"></textarea>
                     </div>
                     <input type="submit" class="btn btn--contact js-submit" value="Claim your free consultation"/>
                 </div>
@@ -283,13 +274,12 @@
                 <span class="form-field__label" for="textarea">
                     <img src="./img/contact-question.png" alt="">
                 </span>
-                <textarea class="form-field__input form-field__input--textarea" id="textarea"
-                          placeholder="How we can help you?"></textarea>
+                <textarea class="form-field__input form-field__input--textarea" id="textarea" placeholder="How we can help you?"></textarea>
             </div>
             <input type="submit" class="btn btn--popup js-submit" value="Submit"/>
         </div>
     </div>
-    <div class="btn btn--wtf js-scroll-to-top">👆</div>
+    <div class="btn btn--up js-scroll-to-top">UP</div>
     <script type="text/javascript" src="js/libs.min.js"></script>
     <script type="text/javascript" src="js/custom.js"></script>
 
