--- a/src/index.html
+++ b/src/index.html
@@ -20,19 +20,19 @@
                 </button>
                 <ul class="nav-menu">
                     <li class="nav-menu__item">
-                        <a class="nav-menu__link" href="#">ABOUT</a>
+                        <a class="nav-menu__link js-smooth" href="#about">ABOUT</a>
                     </li>
                     <li class="nav-menu__item">
-                        <a class="nav-menu__link" href="#">TESTIMONIALS</a>
+                        <a class="nav-menu__link js-smooth" href="#testimonials">TESTIMONIALS</a>
                     </li>
                     <li class="nav-menu__item">
-                        <a class="nav-menu__link" href="#">SERVICES</a>
+                        <a class="nav-menu__link js-smooth" href="#services">SERVICES</a>
                     </li>
                     <li class="nav-menu__item">
-                        <a class="nav-menu__link" href="#">PORTFOLIO</a>
+                        <a class="nav-menu__link js-smooth" href="#portfolio">PORTFOLIO</a>
                     </li>
                     <li class="nav-menu__item">
-                        <a class="nav-menu__link" href="#">CONTACT</a>
+                        <a class="nav-menu__link js-smooth" href="#footer">CONTACT</a>
                     </li>
                 </ul>
                 <div class="nav-logo">
@@ -55,7 +55,7 @@
         </div>
     </header>
 
-    <section class="about">
+    <section class="about" id="about">
         <div class="container container--about">
             <div class="about-company">
                 <h2 class="title title--texted">You come up with the usiness, we’ll build the website</h2>
@@ -69,7 +69,7 @@
                 <a  class="btn btn--about js-scroll-to-footer">Claim your free consultation</a>
             </div>
             <div class="about-client">
-                <img class="about-client__quotes" src="img/quotes.png" alt="">
+                <img class="about-client__quotes" id="testimonials" src="img/quotes.png" alt="">
                 <div class="about-client__slider">
                     <div class="client">
                         <img class="client__photo" src="img/client.jpg" alt="">
@@ -113,7 +113,7 @@
         </div>
     </section>
 
-    <section class="services">
+    <section class="services" id="services">
         <div class="container container--services">
             <h2 class="title title--services">Our Services</h2>
             <div class="text text--services">
@@ -163,7 +163,7 @@
         </div>
     </section>
 
-    <section class="portfolio">
+    <section class="portfolio" id="portfolio">
         <div class="container container--portfolio">
             <h2 class="title title--portfolio">Our Portfolio</h2>
             <div class="text text--portfolio">
