--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,8 @@
             <div class="container container--banner">
                 <p class="banner__head">GET THE FOOLPROOF STRATEGY THAT HELPS YOU WIN</p>
                 <h1 class="banner__info">We give you the stuff you need to make more money</h1>
-                <p class="banner__descr">Bring us your remarkable business. We’ll give you the design, content and tool you need to become unstoppable. 2018 is the year you become rich.</p>
+                <p class="banner__descr">Bring us your remarkable business. We’ll give you the design, content and tool
+                    you need to become unstoppable. 2018 is the year you become rich.</p>
                 <a class="btn btn--banner js-scroll-to-footer">Claim your free consultation</a>
             </div>
         </div>
@@ -66,7 +67,7 @@
                 <p class="text">Or worse, you’ve heard horror stories about programmers, web designers and writers who
                     sprint out of the starting blocks… and then disappear entirely. Luckily, you found us, and no one
                     can stop you now from working with us.</p>
-                <a  class="btn btn--about js-scroll-to-footer">Claim your free consultation</a>
+                <a class="btn btn--about js-scroll-to-footer">Claim your free consultation</a>
             </div>
             <div class="about-client">
                 <img class="about-client__quotes" id="testimonials" src="img/quotes.png" alt="">
@@ -229,55 +230,97 @@
         <div class="contact">
             <div class="container container--contact">
                 <h2 class="title title--contact">Contact us today to learn how we increase your revenue.</h2>
-                <div class="form form--contact">
+                <form class="form form--contact">
                     <div class="form-field">
-                        <label class="form-field__label" for="name">
+                        <label class="form-field__label" for="c_name">
                             <img src="./img/contact-icon.png" alt="">
                         </label>
-                        <input type="text" class="form-field__input" id="name" autocomplete="off" placeholder="Your name">
+                        <input
+                            type="text"
+                            name="name"
+                            class="form-field__input" id="c_name"
+                            autocomplete="off"
+                            placeholder="Your name"
+                        />
                     </div>
                     <div class="form-field">
-                        <label class="form-field__label" for="email">
+                        <label class="form-field__label" for="c_email">
                             <img src="./img/contact-mail.png" alt="">
                         </label>
-                        <input type="email" id="email" class="form-field__input" placeholder="Email">
+                        <input
+                            id="c_email"
+                            type="text"
+                            name="email"
+                            class="form-field__input"
+                            placeholder="Email"
+                        />
                     </div>
                     <div class="form-field">
-                        <span class="form-field__label" for="textarea">
+                        <span class="form-field__label" for="c_textarea">
                             <img src="./img/contact-question.png" alt="">
                         </span>
-                        <textarea class="form-field__input form-field__input--textarea" id="textarea" placeholder="How we can help you?"></textarea>
+                        <textarea
+                            id="c_textarea"
+                            name="message"
+                            class="form-field__input form-field__input--textarea"
+                            placeholder="How we can help you?"
+                        ></textarea>
                     </div>
-                    <input type="submit" class="btn btn--contact js-submit" value="Claim your free consultation"/>
-                </div>
+                    <input
+                        type="submit"
+                        class="btn btn--contact js-submit"
+                        value="Claim your free consultation"
+                    />
+                </form>
             </div>
         </div>
     </footer>
 
     <div class="popup">
         <div class="popup__bg js-close-popup"></div>
-        <div class="popup__form">
+        <form class="popup__form">
             <h2 class="title title--popup">Claim your free consultation</h2>
             <div class="form-field">
-                <label class="form-field__label" for="name">
+                <label class="form-field__label" for="p_name">
                     <img src="./img/contact-icon.png" alt="">
                 </label>
-                <input type="text" class="form-field__input" id="name" placeholder="Your name">
+                <input
+                    id="p_name"
+                    name="name"
+                    type="text"
+                    class="form-field__input"
+                    placeholder="Your name"
+                />
             </div>
             <div class="form-field">
-                <label class="form-field__label" for="email">
+                <label class="form-field__label" for="p_email">
                     <img src="./img/contact-mail.png" alt="">
                 </label>
-                <input type="email" id="email" class="form-field__input" placeholder="Email">
+                <input
+                    id="p_email"
+                    name="email"
+                    type="text"
+                    class="form-field__input"
+                    placeholder="Email"
+                />
             </div>
             <div class="form-field">
-                <span class="form-field__label" for="textarea">
+                <span class="form-field__label" for="p_textarea">
                     <img src="./img/contact-question.png" alt="">
                 </span>
-                <textarea class="form-field__input form-field__input--textarea" id="textarea" placeholder="How we can help you?"></textarea>
+                <textarea
+                    id="p_textarea"
+                    name="message"
+                    class="form-field__input form-field__input--textarea"
+                    placeholder="How we can help you?"
+                ></textarea>
             </div>
-            <input type="submit" class="btn btn--popup js-submit" value="Submit"/>
-        </div>
+            <input
+                type="submit"
+                class="btn btn--popup js-submit"
+                value="Submit"
+            />
+        </form>
     </div>
     <div class="btn btn--up js-scroll-to-top">UP</div>
     <script type="text/javascript" src="js/libs.min.js"></script>
