--- a/src/index.html
+++ b/src/index.html
@@ -266,11 +266,7 @@
                             placeholder="How we can help you?"
                         ></textarea>
                     </div>
-                    <input
-                        type="submit"
-                        class="btn btn--contact js-submit"
-                        value="Claim your free consultation"
-                    />
+                    <button type="submit" class="btn btn--contact js-submit">Claim your free consultation</button>
                 </form>
             </div>
         </div>
@@ -315,11 +311,7 @@
                     placeholder="How we can help you?"
                 ></textarea>
             </div>
-            <input
-                type="submit"
-                class="btn btn--popup js-submit"
-                value="Submit"
-            />
+            <button type="submit" class="btn btn--popup js-submit">Submit</button>
         </form>
     </div>
     <div class="btn btn--up js-scroll-to-top">UP</div>
